# hashhelper

./: .gitignore  Cargo.toml  Makefile  README.md
src/core/: hashhelper.rs
src/demos/: sample_bad.rs  sample_good.rs
